<resources>
    <string name="app_name">Countdown</string>
    <string name="empty"/>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_delete">Delete</string>
    <string name="action_done">Done</string>

    <string name="menu_home">Home</string>
    <string name="menu_coundowns">Countdowns</string> <!-- maybe "Calendar events" -->
    <string name="menu_sync">Sync</string>
    <string name="menu_settings">Settings</string>

    <string name="home_second">Home Second</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_home_second">Hello HomeSecondFragment. Arg: %1$s</string>
    <string name="hello_gallery_second">Hello HomeSecondFragment. Arg: %1$s</string>
    <string name="hello_slideshow_second">Hello HomeSecondFragment. Arg: %1$s</string>

    <!-- Fragment Countdown item -->
    <string name="ci_date_placeholder">3 days, 5 hours, 1 minute and 23 seconds</string>
    <string name="ci_since_until_placeholder">Until</string>
    <string name="ci_event_name_placeholder">event name</string>
    <string name="ci_title_placeholder">countdown name</string>
    <string name="ci_event_static_label">Event:</string>

    <!-- Fragments - Countdowns -->
    <string name="frag_countdowns_none">No countdowns exist yet…</string>

    <!-- Fragments - Countdown details (cc -> create countdown) -->
    <string name="frag_cc">Create countdown</string>
    <string name="frag_ec">Edit countdown</string>
    <string name="frag_cc_label_preview">Preview</string>
    <string name="frag_cc_label_name">Name</string>
    <string name="frag_cc_hint_name">An awesome countdown name</string>
    <string name="frag_cc_label_opacity">Opacity</string>
    <string name="frag_cc_label_color">Background color</string>
    <string name="frag_cc_label_font_color">Foreground color</string>
    <string name="frag_cc_label_choose_event">Select Google event</string>
    <string name="frag_cc_label_show_event">Show event in countdown</string>

    <!-- Preference titles -->
    <string name="settings_header_environment">Environment</string>
    <string name="settings_header_countdowns">Countdowns</string>
    <string name="settings_header_events">Events</string>

    <!-- Preference items -->
    <string name="settings_item_theme_dark">Dark theme</string>
    <string name="reply_title">Default reply action</string>
    <string name="settings_item_show_seconds">Show seconds in countdowns</string>
    <string name="settings_item_calendar_select">Visible calendars</string>

    <!-- Fragment - events -->
    <string name="frag_events_no_perms_label">Calendar access needed for event interaction</string>
    <string name="frag_events_ask_perm_button_label">Grant permissions</string>
    <string name="frag_events_search_hint">Search…</string>
    <string name="frag_events_create_button_label">Create new event</string>
    <string name="ei_title_placeholder">Example event</string>
    <string name="ei_id_placeholder">69</string>
    <string name="ei_cal_id_placeholder">2</string>

    <!-- widget -->
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Select countdown</string>
    <string name="add_widget">Add widget</string>

    <!-- Plurals for time computation -->
    <plurals name="second_plurals">
        <item quantity="one">Second</item>
        <item quantity="other">Seconds</item>
    </plurals>
    <plurals name="minute_plurals">
        <item quantity="one">Minute</item>
        <item quantity="other">Minutes</item>
    </plurals>
    <plurals name="hour_plurals">
        <item quantity="one">Hour</item>
        <item quantity="other">Hours</item>
    </plurals>
    <plurals name="day_plurals">
        <item quantity="one">Day</item>
        <item quantity="other">Days</item>
    </plurals>

</resources>
