<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
            app:title="@string/settings_header_environment">

        <SwitchPreferenceCompat
                app:key="theme_dark"
                app:title="@string/settings_item_theme_dark"
                app:icon="@drawable/ic_invert"
                app:defaultValue="true"/>

        <SwitchPreferenceCompat
                app:key="show_seconds"
                app:title="@string/settings_item_show_seconds"
                app:icon="@drawable/ic_seconds"
                app:defaultValue="true"/>

    </PreferenceCategory>

    <PreferenceCategory
            app:title="@string/settings_header_events">

        <MultiSelectListPreference
                app:key="enabled_calendars"
                app:title="@string/settings_item_calendar_select"
                android:icon="@drawable/ic_calendar"
                app:useSimpleSummaryProvider="true"/>
    </PreferenceCategory>

</PreferenceScreen>
