<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/nav_home">

    <fragment
            android:id="@+id/nav_home"
            android:name="com.kalazi.countdown.ui.home.HomeFragment"
            android:label="@string/menu_home"
            tools:layout="@layout/fragment_home">

        <action
                android:id="@+id/action_1to2"
                app:destination="@id/nav_home_second"/>
    </fragment>
    <fragment
            android:id="@+id/nav_home_second"
            android:name="com.kalazi.countdown.ui.home.HomeSecondFragment"
            android:label="@string/home_second"
            tools:layout="@layout/fragment_home_second">
        <action
                android:id="@+id/action_2to1"
                app:destination="@id/nav_home"/>

        <argument
                android:name="myArg"
                app:argType="string"/>
    </fragment>

    <fragment
            android:id="@+id/nav_settings"
            android:name="com.kalazi.countdown.ui.settings.SettingsFragment"
            android:label="@string/menu_settings"/>

    <fragment
            android:id="@+id/nav_countdowns"
            android:name="com.kalazi.countdown.ui.countdowns.CountdownsFragment"
            android:label="@string/menu_coundowns"
            tools:layout="@layout/fragment_countdowns">

        <action android:id="@+id/action_create_countdown"
                app:destination="@id/nav_create_countdown"/>
        <action android:id="@+id/action_edit_countdown"
                app:destination="@id/nav_edit_countdown">
        </action>
    </fragment>

    <fragment android:id="@+id/nav_create_countdown"
              android:name="com.kalazi.countdown.ui.countdowns.EditCountdownFragment"
              android:label="@string/frag_cc"
              tools:layout="@layout/fragment_edit_countdown">
    </fragment>
    <fragment android:id="@+id/nav_edit_countdown"
              android:name="com.kalazi.countdown.ui.countdowns.EditCountdownFragment"
              android:label="@string/frag_ec"
              tools:layout="@layout/fragment_edit_countdown">
        <argument
                android:name="countdown_array_index"
                android:defaultValue="-1"
                app:argType="integer"/>
    </fragment>
</navigation>
