<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
           android:id="@+id/menu_group_main">
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_timer"
                android:title="@string/menu_home"/>
        <item
                android:id="@+id/nav_widgets"
                android:icon="@drawable/ic_widgets"
                android:title="@string/menu_widgets"/>
        <item
                android:id="@+id/nav_sync"
                android:icon="@drawable/ic_sync"
                android:title="@string/menu_sync"/>
    </group>

    <group android:checkableBehavior="single"
           android:id="@+id/menu_group_bottom">
        <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/menu_settings"/>
    </group>
</menu>
