<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/countdown_item_padding">

    <TextView
            android:id="@+id/ci_color"
            android:visibility="gone"
            android:padding="1dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/ci_remaining_time"
            android:text="@string/ci_date_placeholder"
            android:textSize="@dimen/text_big"
            android:textColor="?android:attr/textColorPrimary"
            android:gravity="center"
            android:padding="1dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <TextView
                android:id="@+id/ci_since_until"
                android:text="@string/ci_since_until_placeholder"
                android:textSize="@dimen/text_small"
                android:padding="1dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/ci_title"
                android:text="@string/ci_title_placeholder"
                android:textSize="@dimen/text_normal"
                android:textColor="?android:attr/textColorPrimary"
                android:layout_marginStart="3dp"
                android:padding="1dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <TextView
                android:id="@+id/ci_event_static"
                android:text="@string/ci_event_static_label"
                android:textSize="@dimen/text_small"
                android:padding="1dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <TextView
                android:id="@+id/ci_event_name"
                android:text="@string/ci_event_name_placeholder"
                android:textSize="@dimen/text_small"
                android:textColor="?android:attr/textColorPrimary"
                android:layout_marginStart="3dp"
                android:padding="1dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </LinearLayout>


</LinearLayout>
