<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".events.EventListFragment"
        android:orientation="vertical">

    <LinearLayout
            android:id="@+id/no_perms_block"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/frag_events_no_perms_label"
                android:textSize="@dimen/text_big"
                android:textColor="?android:attr/textColorPrimary"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <Button
                android:text="@string/frag_events_ask_perm_button_label"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="?android:attr/borderlessButtonStyle"
                android:id="@+id/ask_perm_button"/>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/perms_block"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.appcompat.widget.SearchView
                android:id="@+id/event_search"
                app:queryHint="@string/frag_events_search_hint"
                app:iconifiedByDefault="false"
                android:focusable="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/events_recycler_view"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="0dp"/>
        <Button
                android:id="@+id/frag_events_create"
                android:text="@string/frag_events_create_button_label"
                android:layout_gravity="bottom"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>
