<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:paddingTop="@dimen/form_fragment_padding_top"
              tools:context=".countdowns.EditCountdownFragment">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/cc_item_height"
            android:focusableInTouchMode="true"
            android:focusable="true"
            android:gravity="center_vertical">
        <TextView
                android:id="@+id/cc_label_title"
                android:text="@string/frag_cc_label_name"
                android:textColor="?android:attr/textColorPrimary"
                android:layout_weight="4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/cc_item_hpadding"/>
        <EditText
                android:id="@+id/cc_form_title"
                android:layout_weight="14"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/frag_cc_hint_name"
                android:ems="10"
                android:layout_marginEnd="4dp"
                android:selectAllOnFocus="true"
                android:importantForAutofill="no"/>
        <TextView
                android:id="@+id/cc_title_lock"
                android:text=""
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:layout_marginEnd="10dp"
                app:drawableBottomCompat="@drawable/ic_lock_open"
                android:clickable="true"
                android:focusable="true"
                android:background="?selectableItemBackgroundBorderless"/>

    </LinearLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="@dimen/cc_item_height"
            android:gravity="bottom">
        <TextView
                android:id="@+id/cc_label_opacity"
                android:text="@string/frag_cc_label_opacity"
                android:textColor="?android:attr/textColorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/cc_item_slider_label_padding"
                android:paddingHorizontal="@dimen/cc_item_hpadding"/>
        <SeekBar
                android:id="@+id/cc_form_opacity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:progress="80"/>
    </LinearLayout>

    <com.kalazi.countdown.util.ColorPickSelectableItem
            android:id="@+id/cc_form_color"
            android:text="@string/frag_cc_label_color"
            android:textColor="?android:attr/textColorPrimary"
            android:layout_width="match_parent"
            android:layout_height="@dimen/cc_item_height"
            android:gravity="center_vertical"
            app:defaultPickColor="@color/md_light_blue_500"
            app:iconSize="@dimen/cc_item_icon_size"
            android:background="?attr/selectableItemBackground"
            android:paddingHorizontal="@dimen/cc_item_hpadding"/>

    <com.kalazi.countdown.util.ColorPickSelectableItem
            android:id="@+id/cc_form_font_color"
            android:text="@string/frag_cc_label_font_color"
            android:textColor="?android:attr/textColorPrimary"
            android:layout_width="match_parent"
            android:layout_height="@dimen/cc_item_height"
            android:gravity="center_vertical"
            app:defaultPickColor="@color/md_black"
            app:iconSize="@dimen/cc_item_icon_size"
            android:background="?attr/selectableItemBackground"
            android:paddingHorizontal="@dimen/cc_item_hpadding"/>

    <com.kalazi.countdown.util.CalendarEventPickItem
            android:id="@+id/cc_form_event"
            app:title="@string/frag_cc_label_choose_event"
            app:titleTextColor="?android:attr/textColorPrimary"
            android:layout_width="match_parent"
            android:layout_height="@dimen/cc_item_height"
            android:gravity="center_vertical"
            android:background="?attr/selectableItemBackground"
            android:paddingHorizontal="@dimen/cc_item_hpadding"/>

    <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/cc_form_show_event"
            android:text="@string/frag_cc_label_show_event"
            android:paddingHorizontal="@dimen/cc_item_hpadding"
            android:layout_width="match_parent"
            android:layout_height="@dimen/cc_item_height"/>

</LinearLayout>
